syntax = "proto3";
package pb;
service ExploitServiceExt {
    // Session会话
    // 传入可访问shell文件地址和对方服务器语言
    rpc ExploitWithAttack(ExploitWithAttackReq) returns(ExploitWithAttackRsp) {}
    
    // 批量攻击(返回task_id列表)
    rpc ExploitWithFlood(ExploitWithFloodReq) returns(ExploitWithFloodRsp){}

    // 获取task_id的状态(当任务完成时, 若客户端首次必得标记已读，后续将不再返回该任务id状态。若想获取则用-history参数)
    rpc GetTaskStatus(GetTaskStatusReq) returns(GetTaskStatusRsp){}
}

message ExploitWithAttackReq {
    string target = 1;   // http://172.31.50.248:8080
    string cve = 2;      // 漏洞id
}

message ExploitWithAttackRsp {
    string cve = 1;      // 漏洞id
    string tunnel = 2;   // 隧道
}

message ExploitWithFloodReq {
}
message ExploitWithFloodRsp {
}

message GetTaskStatusReq {
}
message GetTaskStatusRsp {
}